--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@ __pycache__/
 *.pyc
 engram_data/
 test_data/
+example_data/
 *.db
 *.jsonl
 identity/
 models/
 .env
+*.egg-info/
+dist/
+build/
+.pytest_cache/
